@@ -75,7 +75,11 @@ Release 1.3.6 (2009-11-xx)
 - fixed SF# 2801750: NetworkInterface <iface-Obj>forName returns wrong subnetMask
 - fixed SF# 2816315: Problem with POSIX Thread::sleepImpl
 - fixed SF# 2795646: IPv6 address parsing bug
-
+- fixed #0000092: ServerApplication::waitForTerminationRequest(), SIGINT and GDB.
+  Poco::Util::ServerApplication::waitForTerminationRequest() no longer registers a
+  signal handler for SIGINT if the environment variable POCO_ENABLE_DEBUGGER
+  is defined.
+  
 
 Release 1.3.5 (2009-05-11)
 ==========================
@@ -1121,4 +1125,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.3/dist/CHANGELOG#55 $
+$Id: //poco/1.3/dist/CHANGELOG#56 $
